# VideoCut

./: .gitignore  README.md  build.bat  build.sh  crash_log.txt  pubspec.yaml  vcpkg.json
docs/: AI_ASSISTANT_GUIDE.md
lib/: main.dart
lib/audio/: audio_playback_manager.dart
lib/export/: export_dialog.dart  export_progress_dialog.dart  export_wrapper.dart
lib/models/: text_layer_data.dart
lib/native/: bindings.dart  video_engine_wrapper.dart
lib/providers/: editor_provider.dart
lib/screens/: editor_screen.dart
lib/theme/: app_theme.dart  colors.dart  shadows.dart  spacing.dart  typography.dart
lib/utils/: animations.dart
lib/widgets/: interactive_video_frame.dart  timeline_widget.dart  toolbar.dart  video_preview.dart
lib/widgets/common/: studio_button.dart  studio_card.dart  studio_slider.dart  studio_switch.dart  studio_text_field.dart
lib/widgets/properties/: audio_properties_panel.dart  properties_panel.dart  text_properties_panel.dart  video_properties_panel.dart
native/: CMakeLists.txt
native/include/: api.h  audio_engine.h  exporter.h  renderer.h  simple_text_renderer.h  timeline.h  types.h  video_engine.h
native/src/: api.cpp  audio_engine.cpp  exporter.cpp  renderer.cpp  simple_text_renderer.cpp  timeline.cpp  video_engine.cpp
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
